--- a/config/database.yml
+++ b/config/database.yml
@@ -4,12 +4,11 @@ shared: &shared
 
 development:
   <<: *shared
-  url: <%= ENV["DATABASE_URL"] || "postgres:///karlandkeke-development" %>
-  # username: "asilverman"
+  url: <%= ENV["DATABASE_URL"] || "postgis:///karlandkeke-development" %>
 
 test:
   <<: *shared
-  url: <%= ENV["DATABASE_URL"] || "postgres:///karlandkeke-test" %>
+  url: <%= ENV["DATABASE_URL"] || "postgis:///karlandkeke-test" %>
 
 # Set connection pooling params as per: https://devcenter.heroku.com/articles/concurrency-and-database-connections#threaded-servers
 # Also see: https://devcenter.heroku.com/articles/deploying-rails-applications-with-the-puma-web-server#on-worker-boot
